<resources>
    <string name="app_name">CryptoDaily</string>
    <string name="now_you_can_follow_and_receive_the_main_updates_about_the_world_of_cryptos">Now you can follow and receive the main updates about the world of cryptos</string>
    <string name="easy_way_to_track_your_crypto">Easy way to track your crypto</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_login">Login</string>
    <string name="string_sign_up">Sign up</string>
    <string name="create_account">Create account</string>
    <string name="alredy_registered_click_here">Alredy registered? Click here</string>
    <string name="exit_dialog_alert_button">Exit</string>
    <string name="cancel_dialog_alert_button">Cancel</string>
    <string name="are_you_sure_you_want_to_exit_text_view_dialog_alert">Are you sure you want to exit?</string>
    <string name="exit_dialog_alert_text_view">Exit</string>
    <string name="back_button_home_screen_string">Back</string>
    <string name="text_view_current_price_details_screen">Current price</string>
    <string name="emoji">Welcome back! &#x270C;</string>
    <string name="descricao_sobre_o_bitcoin_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_aliquam_tempor_ligula_ac_eros_malesuada_scelerisque_vivamus_tellus_ligula_dignissim_sit_amet_enim_sed_mattis_efficitur_tellus_etiam_est_libero_mollis_vitae_purus_ac_accumsan_congue_orci_cras_non_justo_quis_ipsum_tempor_pulvinar_vel_ut_eros_in_fermentum_sem_magna_sit_amet_pulvinar_lectus_rhoncus_ut_cras_nec_diam_scelerisque_odio_euismod_vestibulum_phasellus_feugiat_justo_vel_molestie_dapibus_donec_sit_amet_sem_consequat_libero_porttitor_tincidunt_etiam_volutpat_consequat_convallis_nulla_arcu_dui_fermentum_ac_elementum_quis_vestibulum_vitae_lectus_vestibulum_efficitur_vehicula_mi_eu_vulputate_dolor_sollicitudin_non_vestibulum_ullamcorper_pharetra_pulvinar_nulla_ultrices_dui_sed_interdum_lacinia_ante_nibh_porta_justo_quis_mollis_erat_odio_in_mauris">Descricao sobre o bitcoin. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tempor ligula ac eros malesuada scelerisque. Vivamus tellus ligula, dignissim sit amet enim sed, mattis efficitur tellus. Etiam est libero, mollis vitae purus ac, accumsan congue orci. Cras non justo quis ipsum tempor pulvinar vel ut eros. In fermentum sem magna, sit amet pulvinar lectus rhoncus ut. Cras nec diam scelerisque odio euismod vestibulum. Phasellus feugiat justo vel molestie dapibus. Donec sit amet sem consequat libero porttitor tincidunt. Etiam volutpat consequat convallis. Nulla arcu dui, fermentum ac elementum quis, vestibulum vitae lectus. Vestibulum efficitur vehicula mi, eu vulputate dolor sollicitudin non. Vestibulum ullamcorper pharetra pulvinar. Nulla ultrices, dui sed interdum lacinia, ante nibh porta justo, quis mollis erat odio in mauris.</string>
    <string name="see_more">See more</string>
</resources>