<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner_alert_dialog">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/exit_text_view_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/exit_dialog_alert_text_view"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/are_you_sure_you_want_to_exit_text_view_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/are_you_sure_you_want_to_exit_text_view_dialog_alert"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/exit_text_view_dialog"
        app:layout_constraintTop_toBottomOf="@+id/exit_text_view_dialog" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/exit_button_dialog_alert"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="#0000"
        android:clickable="true"
        android:textAllCaps="true"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/exit_dialog_alert_button"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/are_you_sure_you_want_to_exit_text_view_dialog"
        app:layout_constraintTop_toTopOf="@+id/cancel_button_dialog_alert" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_button_dialog_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="#0000"
        android:clickable="true"
        android:focusable="true"
        android:textAllCaps="true"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/cancel_dialog_alert_button"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/exit_button_dialog_alert"
        app:layout_constraintTop_toBottomOf="@+id/are_you_sure_you_want_to_exit_text_view_dialog" />


</androidx.constraintlayout.widget.ConstraintLayout>