<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coin_details_fragment_name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/home_color_background"
    tools:context="com.example.Presentation.details.CoinDetailsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_button_details_home_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:background="#0000"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins"
        android:text="@string/back_button_home_screen_string"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_details"
        app:layout_constraintEnd_toEndOf="@+id/toolbar_details"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_name_coin_id_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:fontFamily="@font/poppins_bold"
        tools:text="NameCoin"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view_description"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_details">

        <TextView
            android:id="@+id/text_view_description_detail_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins"
            tools:text="@string/descricao_sobre_o_bitcoin_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_aliquam_tempor_ligula_ac_eros_malesuada_scelerisque_vivamus_tellus_ligula_dignissim_sit_amet_enim_sed_mattis_efficitur_tellus_etiam_est_libero_mollis_vitae_purus_ac_accumsan_congue_orci_cras_non_justo_quis_ipsum_tempor_pulvinar_vel_ut_eros_in_fermentum_sem_magna_sit_amet_pulvinar_lectus_rhoncus_ut_cras_nec_diam_scelerisque_odio_euismod_vestibulum_phasellus_feugiat_justo_vel_molestie_dapibus_donec_sit_amet_sem_consequat_libero_porttitor_tincidunt_etiam_volutpat_consequat_convallis_nulla_arcu_dui_fermentum_ac_elementum_quis_vestibulum_vitae_lectus_vestibulum_efficitur_vehicula_mi_eu_vulputate_dolor_sollicitudin_non_vestibulum_ullamcorper_pharetra_pulvinar_nulla_ultrices_dui_sed_interdum_lacinia_ante_nibh_porta_justo_quis_mollis_erat_odio_in_mauris"
            android:textColor="@color/dark_blue_text_crypto_bank"
            android:textSize="14sp" />
    </androidx.core.widget.NestedScrollView>

    <HorizontalScrollView
        android:id="@+id/scroll_view_container_chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll_view_description">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_group_button1_usd"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="USD"
                android:textAlignment="center"
                android:textSize="10dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_group_button2_eur"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="EUR"
                android:textAlignment="center"
                android:textSize="10dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_group_button3_brl"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="BRL"
                android:textAlignment="center"
                android:textSize="10dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_group_button4_btc"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="BTC"
                android:textAlignment="center"
                android:textSize="10dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_group_button5_eth"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="ETH"
                android:textAlignment="center"
                android:textSize="10dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_group_button6_jpy"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:layout_marginEnd="24dp"
                android:text="JPY"
                android:textAlignment="center"
                android:textSize="10dp"
                android:theme="@style/Widget.Material3.Chip.Suggestion" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_current_price_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/text_view_current_price_details_screen"
        android:textColor="@color/dark_blue_text_crypto_bank"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_view_container_chip_group" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_current_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:fontFamily="@font/poppins_thin"
        android:fontFamily="@font/poppins_thin"
        android:textColor="@color/dark_blue_text_crypto_bank"
        android:textSize="58dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_current_price_tittle"
        tools:text="2500.00 usd"

        />


</androidx.constraintlayout.widget.ConstraintLayout>